# bittorrent

./: Cargo.toml  LICENSE.md  README.md  t-test.torrent
src/: bencode.rs  bt_messages.rs  buffered_reader.rs  chunk.rs  client.rs  default_handler.rs  lib.rs  main.rs  metadata.rs  peer.rs  querystring.rs  server.rs  tracker.rs
src/bencode/: Cargo.toml  bencode.rs
tests/: test.rs
