[package]
name = "bittorrent"
version = "0.1.0"
authors = ["aliang <aliang2344@gmail.com>"]

[dependencies]
combine = "1.0"

[dependencies.bencode]
path = "src/bencode"

[[bin]]
name = "server"
src = "src/server.rs"

[[bin]]
name = "client"
src = "src/client.rs"

[[bin]]
name = "main"
src = "src/main.rs"
